Warning clean up generated when using latest Eclipse
svn path=/trunk/; revision=197